SERVER-80346 Move BSONColumn decompression behind checkBSONConformance option for the validate command