src/mongo/db/catalog/validate_adaptor.cpp
@@ -173,8 +173,14 @@ void schemaValidationFailed(CollectionValidation::ValidateState* state,
 }
 
 // Checks that 'control.count' matches the actual number of measurements in a closed bucket.
-Status _validateCompressedTimeseriesCount(const BSONObj& control, int bucketCount, int version) {
-    if (version == timeseries::kTimeseriesControlUncompressedVersion) {
+Status _validateTimeseriesCount(const BSONObj& control,
+                                int bucketCount,
+                                int version,
+                                bool shouldDecompressBSON) {
+    // Skips the check if a bucket is compressed, but we are not in a validate mode that will
+    // decompress the bucket to actually go through the measurements.
+    if (version == timeseries::kTimeseriesControlUncompressedVersion ||
+        (version == timeseries::kTimeseriesControlCompressedVersion && !shouldDecompressBSON)) {
         return Status::OK();
     }
     long long controlCount;
@@ -265,7 +271,14 @@ Status _validateTimeSeriesMinMax(const CollectionPtr& coll,
                                  timeseries::bucket_catalog::MinMax& minmax,
                                  const BSONElement& controlMin,
                                  const BSONElement& controlMax,
-                                 StringData fieldName) {
+                                 StringData fieldName,
+                                 int version,
+                                 bool shouldDecompressBSON) {
+    // Skips the check if a bucket is compressed, but we are not in a validate mode that will
+    // decompress the bucket to actually go through the measurements.
+    if (version == timeseries::kTimeseriesControlCompressedVersion && !shouldDecompressBSON) {
+        return Status::OK();
+    }
     auto min = minmax.min();
     auto max = minmax.max();
     auto checkMinAndMaxMatch = [&]() {
@@ -317,7 +330,8 @@ Status _validateTimeSeriesDataTimeField(const CollectionPtr& coll,
                                         const BSONElement& controlMax,
                                         StringData fieldName,
                                         int version,
-                                        int* bucketCount) {
+                                        int* bucketCount,
+                                        bool shouldDecompressBSON) {
     timeseries::bucket_catalog::MinMax minmax;
     if (version == timeseries::kTimeseriesControlUncompressedVersion) {
         for (const auto& metric : timeField.Obj()) {
@@ -338,35 +352,44 @@ Status _validateTimeSeriesDataTimeField(const CollectionPtr& coll,
             minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
             ++(*bucketCount);
         }
-    } else {
-        BSONColumn col{timeField};
-        Date_t prevTimestamp = Date_t::min();
-        for (const auto& metric : col) {
-            if (!metric.eoo()) {
-                if (metric.type() != BSONType::Date) {
-                    return Status(
-                        ErrorCodes::BadValue,
-                        fmt::format("Time-series bucket '{}' field is not a Date", fieldName));
-                }
-                // Checks the time values are sorted in increasing order for compressed buckets.
-                Date_t curTimestamp = metric.Date();
-                if (curTimestamp >= prevTimestamp) {
-                    prevTimestamp = curTimestamp;
+    } else if (shouldDecompressBSON) {
+        // Only decompress the bucket if we are in full validation mode, kBackgroundCheckBSON mode,
+        // or kForegroundCheckBSON mode since this is a relatively expensive operation.
+        try {
+            BSONColumn col{timeField};
+            Date_t prevTimestamp = Date_t::min();
+            for (const auto& metric : col) {
+                if (!metric.eoo()) {
+                    if (metric.type() != BSONType::Date) {
+                        return Status(
+                            ErrorCodes::BadValue,
+                            fmt::format("Time-series bucket '{}' field is not a Date", fieldName));
+                    }
+                    // Checks the time values are sorted in increasing order for compressed buckets.
+                    Date_t curTimestamp = metric.Date();
+                    if (curTimestamp >= prevTimestamp) {
+                        prevTimestamp = curTimestamp;
+                    } else {
+                        return Status(
+                            ErrorCodes::BadValue,
+                            fmt::format("Time-series bucket '{}' field is not in ascending order",
+                                        fieldName));
+                    }
+                    minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
+                    ++(*bucketCount);
                 } else {
-                    return Status(
-                        ErrorCodes::BadValue,
-                        fmt::format("Time-series bucket '{}' field is not in ascending order",
-                                    fieldName));
+                    return Status(ErrorCodes::BadValue,
+                                  "Time-series bucket has missing time fields");
                 }
-                minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
-                ++(*bucketCount);
-            } else {
-                return Status(ErrorCodes::BadValue, "Time-series bucket has missing time fields");
             }
+        } catch (DBException& e) {
+            return Status(ErrorCodes::InvalidBSON,
+                          str::stream() << "Exception occurred while decompressing a BSON column: "
+                                        << e.toString());
         }
     }
-
-    if (Status status = _validateTimeSeriesMinMax(coll, minmax, controlMin, controlMax, fieldName);
+    if (Status status = _validateTimeSeriesMinMax(
+            coll, minmax, controlMin, controlMax, fieldName, version, shouldDecompressBSON);
         !status.isOK()) {
         return status;
     }
@@ -384,7 +407,8 @@ Status _validateTimeSeriesDataField(const CollectionPtr& coll,
                                     const BSONElement& controlMax,
                                     StringData fieldName,
                                     int version,
-                                    int bucketCount) {
+                                    int bucketCount,
+                                    bool shouldDecompressBSON) {
     timeseries::bucket_catalog::MinMax minmax;
     if (version == timeseries::kTimeseriesControlUncompressedVersion) {
         // Checks that indices are in increasing order and within the correct range.
@@ -415,16 +439,25 @@ Status _validateTimeSeriesDataField(const CollectionPtr& coll,
             minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
             prevIdx = idx;
         }
-    } else {
-        BSONColumn col{dataField};
-        for (const auto& metric : col) {
-            if (!metric.eoo()) {
-                minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
+    } else if (shouldDecompressBSON) {
+        // Only decompress the bucket if we are in full validation mode, kBackgroundCheckBSON mode,
+        // or kForegroundCheckBSON mode since this is a relatively expensive operation.
+        try {
+            BSONColumn col{dataField};
+            for (const auto& metric : col) {
+                if (!metric.eoo()) {
+                    minmax.update(metric.wrap(fieldName), boost::none, coll->getDefaultCollator());
+                }
             }
+        } catch (DBException& e) {
+            return Status(ErrorCodes::InvalidBSON,
+                          str::stream() << "Exception occurred while decompressing a BSON column: "
+                                        << e.toString());
         }
     }
 
-    if (Status status = _validateTimeSeriesMinMax(coll, minmax, controlMin, controlMax, fieldName);
+    if (Status status = _validateTimeSeriesMinMax(
+            coll, minmax, controlMin, controlMax, fieldName, version, shouldDecompressBSON);
         !status.isOK()) {
         return status;
     }
@@ -434,7 +467,8 @@ Status _validateTimeSeriesDataField(const CollectionPtr& coll,
 
 Status _validateTimeSeriesDataFields(const CollectionPtr& coll,
                                      const BSONObj& recordBson,
-                                     int bucketVersion) {
+                                     int bucketVersion,
+                                     bool shouldDecompressBSON) {
     BSONObj data = recordBson.getField(timeseries::kBucketDataFieldName).Obj();
     BSONObj control = recordBson.getField(timeseries::kBucketControlFieldName).Obj();
     BSONObj controlMin = control.getField(timeseries::kBucketControlMinFieldName).Obj();
@@ -482,12 +516,14 @@ Status _validateTimeSeriesDataFields(const CollectionPtr& coll,
                                                          controlMaxFields[timeFieldName],
                                                          timeFieldName,
                                                          bucketVersion,
-                                                         &bucketCount);
+                                                         &bucketCount,
+                                                         shouldDecompressBSON);
         !status.isOK()) {
         return status;
     }
 
-    if (Status status = _validateCompressedTimeseriesCount(control, bucketCount, bucketVersion);
+    if (Status status =
+            _validateTimeseriesCount(control, bucketCount, bucketVersion, shouldDecompressBSON);
         !status.isOK()) {
         return status;
     }
@@ -507,7 +543,8 @@ Status _validateTimeSeriesDataFields(const CollectionPtr& coll,
                                                              controlMaxFields[fieldName],
                                                              fieldName,
                                                              bucketVersion,
-                                                             bucketCount);
+                                                             bucketCount,
+                                                             shouldDecompressBSON);
                 !status.isOK()) {
                 return status;
             }
@@ -522,7 +559,8 @@ Status _validateTimeSeriesDataFields(const CollectionPtr& coll,
  */
 Status _validateTimeSeriesBucketRecord(const CollectionPtr& collection,
                                        const BSONObj& recordBson,
-                                       ValidateResults* results) {
+                                       ValidateResults* results,
+                                       bool shouldDecompressBSON) {
     int bucketVersion = recordBson.getField(timeseries::kBucketControlFieldName)
                             .Obj()
                             .getIntField(timeseries::kBucketControlVersionFieldName);
@@ -536,7 +574,8 @@ Status _validateTimeSeriesBucketRecord(const CollectionPtr& collection,
         return status;
     }
 
-    if (Status status = _validateTimeSeriesDataFields(collection, recordBson, bucketVersion);
+    if (Status status = _validateTimeSeriesDataFields(
+            collection, recordBson, bucketVersion, shouldDecompressBSON);
         !status.isOK()) {
         return status;
     }
@@ -771,7 +810,8 @@ void ValidateAdaptor::traverseRecordStore(OperationContext* opCtx,
                 _enforceTimeseriesBucketsAreAlwaysCompressed(recordBson, results);
 
                 // Checks for time-series collection consistency.
-                Status bucketStatus = _validateTimeSeriesBucketRecord(coll, recordBson, results);
+                Status bucketStatus = _validateTimeSeriesBucketRecord(
+                    coll, recordBson, results, _validateState->shouldDecompressBSONColumn());
                 // This log id should be kept in sync with the associated warning messages that are
                 // returned to the client.
                 if (!bucketStatus.isOK()) {
